major docs changes
