# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:3080",
+    "host": "127.0.0.1:3000",
     "basePath": "/",
     "paths": {
         "/login": {
@@ -22,41 +22,31 @@
                 "operationId": "Login",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "User name",
                         "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "formData",
+                        "required": true
                     },
                     {
+                        "type": "string",
                         "description": "User password",
                         "name": "pass",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "access JWT token",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.AccessTokenJWT"
                         }
                     },
                     "400": {
                         "description": "Server error",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Bearer auth required",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     }
                 }
@@ -75,41 +65,31 @@
                 "operationId": "Register",
                 "parameters": [
                     {
-                        "description": "User name",
+                        "type": "string",
+                        "description": "Username",
                         "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "formData",
+                        "required": true
                     },
                     {
+                        "type": "string",
                         "description": "User password",
                         "name": "pass",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "access JWT token",
+                        "description": "User registered",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     },
                     "400": {
                         "description": "Server error",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Bearer auth required",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     }
                 }
@@ -128,32 +108,30 @@
                 "operationId": "GetTransaction",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "Transaction id",
                         "name": "id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.TransactionUserSystem"
                         }
                     },
                     "400": {
                         "description": "Server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     },
                     "401": {
                         "description": "Bearer auth required",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     }
                 }
@@ -170,41 +148,37 @@
                 "operationId": "transaction",
                 "parameters": [
                     {
-                        "description": "Transaction amount",
+                        "type": "number",
+                        "description": "Transaction amount(\u003e0)",
                         "name": "amount",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
+                        "in": "formData",
+                        "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "1 input, 2 output",
                         "name": "type",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.SystemUserBalance"
                         }
                     },
                     "400": {
                         "description": "Server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     },
                     "401": {
                         "description": "Bearer auth required",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     }
                 }
@@ -231,15 +205,75 @@
                     "400": {
                         "description": "Server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     },
                     "401": {
                         "description": "Bearer auth required",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.MessageModel"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "model.AccessTokenJWT": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.MessageModel": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "error"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "model.SystemUserBalance": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TransactionUserSystem": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "sender": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "integer"
                 }
             }
         }
