# model/system_user.go
@@ -1,18 +1,18 @@
 package model
 
 type SystemUser struct {
-	Id   int
-	Name string `json: "name"`
-	Pass string `json: "password"`
+	Id   int    `json:"id"`
+	Name string `json:"name"`
+	Pass string `json:"password"`
 }
 
 type SystemUsers struct {
-	SystemUsers []SystemUser `json: "system_users"`
+	SystemUsers []SystemUser `json:"system_users"`
 }
 
 type SystemUserBalance struct {
 	Id      int
-	Name    string  `json: "name"`
-	Pass    string  `json: "password"`
-	Balance float64 `json: "balance"`
+	Name    string  `json:"name"`
+	Pass    string  `json:"password"`
+	Balance float64 `json:"balance"`
 }
